--- a/contact.css
+++ b/contact.css
@@ -1,30 +1,66 @@
-.banner-top{
-      margin-left: 24%;
-    }
-    @media (min-width: 992px){
-      .work-content .col-md-4{
-        width:25%;
-        margin-right: 8%;
-      }
-    }
-    .crop {
-      width: 650px;
-      height: 650px;
-      overflow: hidden;
-    }
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
 
-    .crop img {
-      width: 650px;
-      height: 650px;
-      margin: -200px 200px 200px -200px;
-    }
-    #contentSub, #contentcontainer, #footer-box, #sitesub, #catlinks, #search-controls, #p-logo, .h3, .printfooter, .firstHeading, .visualClear {display: none;} /*-- hides default wiki settings --*/
+.banner-top {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
 
-    #globalWrapper, #content { /*-- changes default wiki settings --*/
-      width: 100%; 
-      height: 100%;
-      border: 0px;
-      background-color: transparent;
-      margin: 0px;
-      padding: 0px;
-    }
+@media (min-width: 992px) {
+  .work-content .col-md-4 {
+    width: 25%;
+    margin-right: 8%;
+  }
+}
+
+.crop {
+  width: 650px;
+  height: 650px;
+  overflow: hidden;
+  position: relative;
+}
+
+.crop img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#contentSub, #contentcontainer, #footer-box, #sitesub, #catlinks, #search-controls, #p-logo, .h3, .printfooter, .firstHeading, .visualClear {
+  display: none;
+}
+
+#globalWrapper, #content {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+}
+
+/* Additional styling for links */
+.container a {
+  color: blue;
+  text-decoration: none; /* removes underline */
+}
+
+.container a:hover {
+  text-decoration: underline; /* adds underline on hover */
+}
+
+/* Added padding to work-header for spacing above the heading */
+.work-header {
+  padding-top: 15px; /* Adjust this value as needed to create more space */
+}
+
+.text-uppercase {
+  padding-top: 20px;
+}
