--- a/index.css
+++ b/index.css
@@ -1,17 +1,22 @@
-html {
+html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
 }
 
 .banner-top {
   margin-left: 24%;
 }
+
 @media (min-width: 992px) {
   .work-content .col-md-4 {
     width: 25%;
     margin-right: 8%;
   }
 }
+
 .crop {
   width: 650px;
   height: 650px;
@@ -19,9 +24,9 @@ html {
 }
 
 .crop img {
-  width: 650px;
-  height: 650px;
-  margin: -200px 200px 200px -200px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #contentSub,
@@ -36,15 +41,11 @@ html {
 .firstHeading,
 .visualClear {
   display: none;
-} /*-- hides default wiki settings --*/
+}
 
 #globalWrapper,
 #content {
-  /*-- changes default wiki settings --*/
   width: 100%;
   height: 100%;
-  border: 0px;
-  background-color: transparent;
-  margin: 0px;
-  padding: 0px;
+  border: none;
 }
