--- a/project.css
+++ b/project.css
@@ -1,44 +1,49 @@
-.banner-top {
-  margin-left: 24%;
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
 }
+
+.banner-top {
+  width: 100%; 
+  display: flex; 
+  justify-content: center; 
+  padding: 10px 0; 
+}
+
 @media (min-width: 992px) {
   .work-content .col-md-4 {
-    width: 25%;
-    margin-right: 8%;
+    width: 25%; 
+    margin-right: 8%; 
   }
 }
+
 .crop {
   width: 650px;
   height: 650px;
   overflow: hidden;
+  position: relative; 
 }
 
 .crop img {
-  width: 650px;
-  height: 650px;
-  margin: -200px 200px 200px -200px;
-}
-#contentSub,
-#contentcontainer,
-#footer-box,
-#sitesub,
-#catlinks,
-#search-controls,
-#p-logo,
-.h3,
-.printfooter,
-.firstHeading,
-.visualClear {
-  display: none;
-} /*-- hides default wiki settings --*/
-
-#globalWrapper,
-#content {
-  /*-- changes default wiki settings --*/
   width: 100%;
   height: 100%;
-  border: 0px;
+  object-fit: cover; 
+}
+
+
+#contentSub, #contentcontainer, #footer-box, #sitesub, #catlinks,
+#search-controls, #p-logo, .h3, .printfooter, .firstHeading, .visualClear {
+  display: none;
+}
+
+#globalWrapper, #content {
+  width: 100%;
+  height: 100%;
+  border: none;
   background-color: transparent;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
