--- a/aboutus.css
+++ b/aboutus.css
@@ -5,6 +5,8 @@
   display: block; 
   object-fit: cover; 
   margin: 0 auto; 
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .founder {
@@ -35,7 +37,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
 }
 
 /* Biography box */
@@ -49,6 +50,7 @@ body {
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   text-align: center;
+  margin: 25px;
 }
 
 /* Initial height of the biography box (only name and picture visible) */
@@ -58,9 +60,9 @@ body {
 
 /* Hover effect */
 .bio-box:hover {
-  height: 480px; /* Smaller expansion downwards */
+  height: 500px; /* Smaller expansion downwards */
   width: 300px; /* Slight expansion to the left and right */
-  margin-top: -15px; /* Slight expansion upwards */
+  margin-top: -10px; /* Slight expansion upwards */
   margin-left: -15px; /* Slight expansion to the left */
   margin-right: -15px; /* Slight expansion to the right */
 }
